--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "glob": "^7.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "safe-json-stringify": "^1.2.0",
         "ts-node": "^10.4.0",
         "tsconfig-paths": "^3.12.0"
     },
@@ -42,6 +43,7 @@
         "@types/glob": "^7.2.0",
         "@types/node": "^17.0.10",
         "@types/react-dom": "^17.0.9",
+        "@types/safe-json-stringify": "^1.1.2",
         "prettier": "^2.4.1",
         "typescript": "^4.4.3"
     },
