--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,27 +11,32 @@ jobs:
         name: Node ${{ matrix.node }} Testing
         steps:
             - uses: actions/checkout@v2
+
             - name: Setup Node
               uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node }}
                   registry-url: 'https://registry.npmjs.org'
-            - name: Cache node modules
-              uses: actions/cache@v2
-              env:
-                  cache-name: cache-node-modules
-              with:
-                  path: '**/node_modules'
-                  key: ${{ matrix.node }}-modules-${{ hashFiles('**/package-lock.json') }}
+                  cahce: 'npm'
+
             - name: NPM Install
-              run: npm install
+                # Skip post-install scripts here, as a malicious
+              # script could steal NODE_AUTH_TOKEN.
+              run: npm install --ignore-scripts
               env:
                 NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+
+            - name: NPM Rebuild & Prepare
+              run: npm rebuild && npm run prepare --if-present
+
             - name: Lint
-              run: npm run-script lint
+              run: npm run lint
+
             - name: NPM Test
               run: npm test
+
             - name: Build lib
-              run: npm run-script build
+              run: npm run build
+
             - name: NPM Audit
               run: npm audit --production
