--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 0",
-        "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-        "lint": "prettier --check \"src/**/*.{ts,tsx}\"",
+        "format": "prettier --write \"**/*.{ts,tsx,json}\"",
+        "lint": "prettier --check \"**/*.{ts,tsx,json}\"",
         "build": "tsc && chmod +x lib/bin/mayd-contentful.js",
         "prepublishOnly": "npm test && npm run lint && npm run build",
         "preversion": "npm run lint"
@@ -40,6 +40,7 @@
         "tsconfig-paths": "^3.12.0"
     },
     "devDependencies": {
+        "@becklyn/prettier": "^1.0.2",
         "@types/glob": "^7.2.0",
         "@types/node": "^17.0.10",
         "@types/react-dom": "^17.0.9",
@@ -47,12 +48,5 @@
         "prettier": "^2.4.1",
         "typescript": "^4.4.3"
     },
-    "prettier": {
-        "trailingComma": "es5",
-        "tabWidth": 4,
-        "semi": true,
-        "printWidth": 100,
-        "singleQuote": false,
-        "arrowParens": "avoid"
-    }
+    "prettier": "@becklyn/prettier"
 }
