Fix relation type normalization

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
         "allowJs": true
     },
     "include": ["src", "bin", "compiled"],
-    "exclude": ["node_modules", "**/__tests__/*", "lib"]
+    "exclude": ["node_modules", "**/__tests__/*", "lib", "test"]
 }
