--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "url": "git+https://github.com/Becklyn-Studios/mayd-contentful-adapter.git"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 0",
+        "test": "jest",
         "format": "prettier --write \"**/*.{ts,tsx,json}\"",
         "lint": "prettier --check \"**/*.{ts,tsx,json}\"",
         "build": "npm run clean && tsc && chmod +x lib/bin/mayd-contentful.js",
@@ -43,10 +43,13 @@
     "devDependencies": {
         "@becklyn/prettier": "^1.0.2",
         "@types/glob": "^7.2.0",
+        "@types/jest": "^27.4.1",
         "@types/node": "^17.0.10",
         "@types/react-dom": "^17.0.9",
         "@types/safe-json-stringify": "^1.1.2",
+        "jest": "^27.5.1",
         "prettier": "^2.4.1",
+        "ts-jest": "^27.1.4",
         "typescript": "^4.4.3"
     },
     "prettier": "@becklyn/prettier"
