--- a/package.json
+++ b/package.json
@@ -25,6 +25,16 @@
     "bin": {
         "mayd-contentful": "lib/bin/mayd-contentful.js"
     },
+    "peerDependencies": {
+        "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+        "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+        "@types/react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    },
+    "peerDependenciesMeta": {
+        "@types/react": {
+            "optional": true
+        }
+    },
     "dependencies": {
         "@contentful/rich-text-html-renderer": "^15.13.1",
         "@contentful/rich-text-types": "^15.13.2",
@@ -34,18 +44,17 @@
         "contentful-migration": "^4.9.7",
         "dotenv": "^14.3.2",
         "glob": "^7.2.3",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
         "safe-json-stringify": "^1.2.0",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^3.14.1"
     },
     "devDependencies": {
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
         "@becklyn/prettier": "^1.0.2",
         "@types/glob": "^7.2.0",
         "@types/jest": "^27.5.2",
         "@types/node": "^17.0.45",
-        "@types/react-dom": "^17.0.17",
         "@types/safe-json-stringify": "^1.1.2",
         "jest": "^27.5.1",
         "prettier": "^2.7.1",
