--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,40 +3,35 @@ on: [push, pull_request]
 name: CI
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                node: [ '14', '16' ]
-        name: Node ${{ matrix.node }} Testing
-        steps:
-            - uses: actions/checkout@v2
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: ["16", "18"]
+    name: Node ${{ matrix.node }} Testing
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-            - name: Setup Node
-              uses: actions/setup-node@v2
-              with:
-                  node-version: ${{ matrix.node }}
-                  registry-url: 'https://registry.npmjs.org'
-                  cahce: 'npm'
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
 
-            - name: NPM Install
-                # Skip post-install scripts here, as a malicious
-              # script could steal NODE_AUTH_TOKEN.
-              run: npm install --ignore-scripts
-              env:
-                NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - name: NPM Install
+        run: npm install --ignore-scripts
 
-            - name: NPM Rebuild & Prepare
-              run: npm rebuild && npm run prepare --if-present
+      - name: NPM Rebuild & Prepare
+        run: npm rebuild && npm run prepare --if-present
 
-            - name: Lint
-              run: npm run lint
+      - name: Lint
+        run: npm run lint
 
-            - name: NPM Test
-              run: npm test
+      - name: NPM Test
+        run: npm test
 
-            - name: Build lib
-              run: npm run build
+      - name: Build lib
+        run: npm run build
 
-            - name: NPM Audit
-              run: npm audit --production
+      - name: NPM Audit
+        run: npm audit --production
