--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-    "name": "@mayd/contentful-adapter",
+    "name": "@becklyn/contentful-adapter",
     "version": "5.9.2",
-    "license": "UNLICENSED",
-    "homepage": "https://github.com/Becklyn-Studios/mayd-contentful-adapter",
+    "license": "BSD-3-Clause",
+    "author": "Becklyn <hello@becklyn.com>",
+    "homepage": "https://github.com/Becklyn-Studios/contentful-adapter",
+    "keywords": [
+        "becklyn",
+        "library",
+        "contentful",
+        "typescript"
+    ],
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Becklyn-Studios/mayd-contentful-adapter.git"
+        "url": "git+https://github.com/Becklyn-Studios/contentful-adapter.git"
     },
     "scripts": {
         "test": "jest",
         "format": "prettier --write \"**/*.{ts,tsx,json}\"",
         "lint": "prettier --check \"**/*.{ts,tsx,json}\"",
-        "build": "npm run clean && tsc && chmod +x lib/bin/mayd-contentful.js",
+        "build": "npm run clean && tsc && chmod +x lib/bin/becklyn-contentful.js",
         "clean": "rm -rf lib",
         "prepublishOnly": "npm test && npm run lint && npm run build",
         "preversion": "npm run lint"
@@ -23,43 +30,33 @@
     "main": "lib/src/index.js",
     "types": "lib/src/index.d.ts",
     "bin": {
-        "mayd-contentful": "lib/bin/mayd-contentful.js"
-    },
-    "peerDependencies": {
-        "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-        "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
-        "@types/react": "^16.8.0 || ^17.0.0 || ^18.0.0"
-    },
-    "peerDependenciesMeta": {
-        "@types/react": {
-            "optional": true
-        }
+        "becklyn-contentful": "lib/bin/becklyn-contentful.js"
     },
     "dependencies": {
-        "@contentful/rich-text-html-renderer": "^15.13.1",
-        "@contentful/rich-text-types": "^15.13.2",
-        "@mayd/ui-types": "^4.3.0",
-        "contentful": "^9.2.5",
-        "contentful-management": "^10.15.1",
-        "contentful-migration": "^4.9.7",
+        "@becklyn/ui-types": "^5.0.0",
+        "@contentful/rich-text-html-renderer": "^15.15.1",
+        "@contentful/rich-text-types": "^15.15.1",
+        "contentful": "^9.3.3",
+        "contentful-management": "^10.30.0",
+        "contentful-migration": "^4.12.9",
         "dotenv": "^14.3.2",
         "glob": "^7.2.3",
         "safe-json-stringify": "^1.2.0",
         "ts-node": "^10.9.1",
-        "tsconfig-paths": "^3.14.1"
+        "tsconfig-paths": "^3.14.2"
     },
     "devDependencies": {
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
         "@becklyn/prettier": "^1.0.2",
         "@types/glob": "^7.2.0",
         "@types/jest": "^27.5.2",
         "@types/node": "^17.0.45",
         "@types/safe-json-stringify": "^1.1.2",
         "jest": "^27.5.1",
-        "prettier": "^2.7.1",
+        "prettier": "^2.8.4",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
         "ts-jest": "^27.1.5",
-        "typescript": "^4.8.4"
+        "typescript": "^4.9.5"
     },
     "prettier": "@becklyn/prettier"
 }
